# kachaka_challenge_trail2026

./: .dockerignore  .gitignore  .gitmodules  BUILD-DOCKER-IMAGE.sh  Makefile  README.md  RUN-DOCKER-CONTAINER.sh  pyproject.toml  run_docker_container.py
docker/: Dockerfile  darwin.docker-compose.yml  docker-compose.yml
docker/scripts/: initialize-bash-script.sh  initialize-docker-container.sh
project/: README.md  competition.md  implementation_guide.md
ros2_ws/src/kachaka_detect_person/: CMakeLists.txt  package.xml
ros2_ws/src/kachaka_detect_person/src/kachaka_detect_person/: person_detection_client.py  person_detection_service.py
ros2_ws/src/kachaka_detect_person_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/kachaka_detect_person_interfaces/srv/: HumanDetection.srv  PersonDetection.srv
ros2_ws/src/kachaka_human_tracking/: CMakeLists.txt  package.xml
ros2_ws/src/kachaka_human_tracking/src/kachaka_human_tracking/: follow.py  human_follow.py
ros2_ws/src/kachaka_utils/: CMakeLists.txt  package.xml
ros2_ws/src/kachaka_utils/launch/: launch_sim.launch.py
ros2_ws/src/kachaka_utils/scripts/: executor.py
ros2_ws/src/kachaka_utils/src/kachaka_utils/: nav_manager.py  position_helper.py  voice_manager.py
ros2_ws/src/trail_kachaka_example/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/trail_kachaka_example/launch/: launch_real.launch.py  launch_sim.launch.py
ros2_ws/src/trail_kachaka_example/scripts/: executor.py  human_follower.py
ros2_ws/src/trail_kachaka_example/src/trail_kachaka_example/: human_follower.py  llm_manager.py  some_sub_task1.py  some_sub_task2.py
ros2_ws/src/trail_kachaka_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/trail_kachaka_msgs/msg/: FoundGarbage.msg
ros2_ws/src/trail_kachaka_msgs/srv/: ExampleHumanFollower.srv
ros2_ws/src/trail_kachaka_sample/: CMakeLists.txt  package.xml
ros2_ws/src/trail_kachaka_sample/scripts/: executor.py
ros2_ws/src/trail_mpc_task_manager/: CMakeLists.txt  package.xml
ros2_ws/src/trail_mpc_task_manager/launch/: launch_real.launch.py  launch_sim.launch.py
ros2_ws/src/trail_mpc_task_manager/scripts/: executor.py
ros2_ws/src/trail_mpc_task_manager/src/trail_mpc_task_manager/: wait_for_ready.py
ros2_ws/src/trail_task_judge/: CMakeLists.txt  package.xml
ros2_ws/src/trail_task_judge/launch/: task_judge.launch.py
ros2_ws/src/trail_task_judge/scripts/: task1_judge_node.py  task2_judge_node.py  task3_judge_node.py
template/: cookiecutter.json
template/{{cookiecutter.package_name}}/: CMakeLists.txt  package.xml
template/{{cookiecutter.package_name}}/launch/: launch_sim.launch.py
