[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.0.0",
    "cookiecutter>=2.6.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "empy>=4.2",
    "lark>=1.2.2",
    "numpy~=1.26",
    "setuptools>=80.8.0",
]

[tool.uv]
python-preference = "only-system"

